<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/buttonMyOrders"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/buttonAllOrders"
        android:layout_alignRight="@+id/buttonAllOrders"
        android:layout_below="@+id/buttonAllOrders"
        android:text="@string/main_my_orders" />

    <Button
        android:id="@+id/buttonNewOrders"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/main_new_orders" />

    <Button
        android:id="@+id/buttonAllOrders"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/buttonNewOrders"
        android:layout_below="@+id/buttonNewOrders"
        android:text="@string/main_all_orders" />

    <Button
        android:id="@+id/buttonNewOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/buttonMyOrders"
        android:layout_alignRight="@+id/buttonMyOrders"
        android:layout_below="@+id/buttonMyOrders"
        android:text="@string/main_new_order" />

    <Button
        android:id="@+id/buttonCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/buttonNewOrder"
        android:layout_alignRight="@+id/buttonNewOrder"
        android:layout_below="@+id/buttonNewOrder"
        android:text="@string/main_cancel_order" />

    <Button
        android:id="@+id/buttonSite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/buttonCancel"
        android:layout_alignRight="@+id/buttonCancel"
        android:layout_below="@+id/buttonCancel"
        android:text="@string/main_site" />

    <Button
        android:id="@+id/buttonUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/buttonSite"
        android:layout_alignRight="@+id/buttonSite"
        android:layout_below="@+id/buttonSite"
        android:text="@string/main_update" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:text="@string/main_update_text" />

    <Button
        android:id="@+id/buttonSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/buttonUpdate"
        android:layout_alignRight="@+id/buttonUpdate"
        android:layout_below="@+id/buttonUpdate"
        android:text="@string/main_settings" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/main_update_date_str"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>
